# ImagenHeap

./: .gitignore  CONSTRUCTORS.md  DESIGN.md  DIR_STRUCTURE.md  ImagenHeap.ipynb  README.md  STRATEGY.md  batch_sam_tests.ipynb  coco_to_yolo.ipynb  create_dataset.ipynb  create_dataset.py  create_dataset_simplified.ipynb  detect_num_people.ipynb  eval.ipynb  grounded_sam.py  install.sh  push_to_hub.ipynb  pyproject.toml  requirements.txt  run_create_dataset.py  run_segmentation.ipynb  sam_results.py  segment_example.ipynb  setup.py  smple.ipynb  test.ipynb  use_segment.ipynb  utils.py  yolo_dataset.ipynb  yolo_dataset.py  yolo_train.ipynb  yolo_train.py
archive/: create_dataset.ipynb  create_dataset_simplified.ipynb  create_dataset_v2.ipynb  download_dataset_draft.ipynb  grounded_sam_batch_v1.py  grounded_sam_old.py  run_create_dataset.py  sam_results.py  use_segment.ipynb  yolo_dataset.ipynb
components/: image_input.py
configs/: fashion_five.yml  fashion_people.yml  fashion_people_detection.yml  fashion_people_detection_no_person.yml  test.yml  train_config.yml
imagenheap/: visualizer.py
notebooks/: auto_annotate.ipynb  batch_sam_tests.ipynb  detect_num_people.ipynb  make_test_set.ipynb  resize_dataset_images.ipynb  segmentation_png.ipynb  yolo_results.ipynb
scripts/: clone_hf_yolo_repo.sh  cpu_monitor.py  gpu_monitor.py  install.sh  install_conda.sh  monitor.py  sam_results.py
segment/: create_dataset.py  dino_script.py  download_dataset.py  download_dataset_v2.py  filters.py  format_results.py  grounded_sam.py  imagenheap.py  os_test.ipynb  sam_results.py  (+5 more)
(+51 files in other folders)
